# microWakeWords

./: .gitignore  ESP32-S3-AUDIO-Board-TaterTimer.yaml  README.md  esp32-s3-box-3.yaml  hey_tater.tflite  home-assistant-voice.yaml  koala-TaterTimer.yaml  respeakerLite-TaterTimer.yaml  respeakerXVF3800-TaterTimer.yaml  satellite1-Rozbot-basic.yaml  satellite1-Rozbot.yaml  satellite1-TaterTimer.yaml  voicePE-TaterTimer.yaml  wake_sound_manifest.json  wake_word_manifest.json
sat1/xmos_source/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_sat1_fixed_delay.sh  firmware_version.txt  requirements.txt  xmos_macros.cmake
sat1/xmos_source/.github/workflows/: apps.yml  release.yml
sat1/xmos_source/docs/: versioning.md
sat1/xmos_source/modules/: CMakeLists.txt
sat1/xmos_source/modules/fph/: CMakeLists.txt
sat1/xmos_source/modules/fph/i2s_sync/: CMakeLists.txt
sat1/xmos_source/modules/fph/i2s_sync/api/: rtos_i2s.h
sat1/xmos_source/modules/fph/i2s_sync/src/: rtos_i2s.c  rtos_i2s_rpc.c
sat1/xmos_source/modules/fph/rtos_device_control/: CMakeLists.txt
sat1/xmos_source/modules/fph/rtos_device_control/api/: device_control.h
sat1/xmos_source/modules/fph/rtos_device_control/src/: device_control.c
sat1/xmos_source/modules/fph/rtos_mic_array/: CMakeLists.txt
sat1/xmos_source/modules/fph/rtos_mic_array/vanilla/: mic_array_vanilla.cpp
sat1/xmos_source/modules/fph/rtos_ws2812/: CMakeLists.txt
sat1/xmos_source/modules/fph/rtos_ws2812/api/: rtos_ws2812.h
sat1/xmos_source/modules/fph/rtos_ws2812/src/: rtos_ws2812.c
sat1/xmos_source/modules/xscope_fileio/: CMakeLists.txt
sat1/xmos_source/satellite-xmos-firmware/: explorer_devboard.cmake  firmware.cmake  satellite1-usb.cmake  satellite1.cmake  versioning.py
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/: CMakeLists.txt
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/reference/: CMakeLists.txt
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/reference/adec/: audio_pipeline_t1.c
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/reference/empty/: audio_pipeline_dsp.h  audio_pipeline_t0.c  audio_pipeline_t1.c
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/reference/fixed_delay/: audio_pipeline_dsp.h  audio_pipeline_t0.c  audio_pipeline_t1.c
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/speaker/: CMakeLists.txt  speaker_pipeline.h
sat1/xmos_source/satellite-xmos-firmware/audio_pipelines/speaker/passthrough/: speaker_pipeline.c
sat1/xmos_source/satellite-xmos-firmware/bsp_config/: bsp_config.cmake
sat1/xmos_source/satellite-xmos-firmware/bsp_config/SATELLITE1/: SATELLITE1.cmake  SATELLITE1.xn
sat1/xmos_source/satellite-xmos-firmware/bsp_config/SATELLITE1-USB/: SATELLITE1-USB.cmake
sat1/xmos_source/satellite-xmos-firmware/bsp_config/SATELLITE1-USB/platform/: driver_instances.h  (+2 more)
sat1/xmos_source/satellite-xmos-firmware/bsp_config/XCORE-AI-EXPLORER/: XCORE-AI-EXPLORER.cmake  XCORE-AI-EXPLORER.xn
sat1/xmos_source/satellite-xmos-firmware/src/: FreeRTOSConfig.h  app_conf.h  app_conf_check.h  main.c
sat1/xmos_source/satellite-xmos-firmware/src/control/: servicer.c  servicer.h
sat1/xmos_source/satellite-xmos-firmware/src/dfu_int/: dfu_cmds.h  dfu_cmds_map.h  dfu_common.c  dfu_servicer.c
sat1/xmos_source/satellite-xmos-firmware/src/doa/: doa_cmds.h  doa_estimator.c  doa_estimator.h  doa_servicer.c  doa_servicer.h
sat1/xmos_source/satellite-xmos-firmware/src/gpio/: gpio_cmds.h  gpio_servicer.c  gpio_servicer.h
sat1/xmos_source/satellite-xmos-firmware/src/led_ring/: led_ring_cmds.h  led_ring_servicer.c  led_ring_servicer.h
sat1/xmos_source/satellite-xmos-firmware/src/usb/: adaptive_rate_adjust.c  adaptive_rate_adjust.h  adaptive_rate_callback.c  adaptive_rate_callback.h  tusb_config.h  usb_audio.c  usb_audio.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c  usb_descriptors.h
sat1/xmos_source/scripts/: fetch_dependencies.sh
sat1/xmos_source/tests/: conftest.py
sat1/xmos_source/tests/test_hw_sat1_firmware/: conftest.py  test_usb_dfu.py
sat1/xmos_source/tests/test_versioning/: conftest.py  test_git.py  test_version_parsing.py
sat1/xmos_source/tools/ci/: build_firmware.sh  firmwares.txt  helper_functions.sh
(+1045 files in other folders)
